# TiPS

./: .gitignore  CMakeLists.txt  README.md  test.sh
cmake/: core.cmake
examples/: tensorflow2_keras_mnist.py  tensorflow_mnist.py
swiftps/: CMakeLists.txt
swiftps/core/common/: CMakeLists.txt  common.h  macro.h  naive_buffer.cc  naive_buffer.h  naive_buffer_test.cc  naive_rpc.cc  rpc.cc  rpc.h  swifts_rpc.cc  swifts_rpc.h  swifts_rpc_test.cc  thread_pool.cc  thread_pool.h  zmq_message.cc
swiftps/core/mpi/: CMakeLists.txt  mpi.cc  mpi.h  mpi_context.cc  swifts_mpi.cc  swifts_mpi.h
swiftps/core/ps/: CMakeLists.txt  server.cc
swiftsnails/core/: CMakeLists.txt
swiftsnails/core/common/: CMakeLists.txt  common.h  macro.h  managed_thread.cc  managed_thread.h  semaphore.cc  semaphore.h  thread_pool.h
swiftsnails/core/mpi/: CMakeLists.txt  mpi_context.cc  mpi_context.h
swiftsnails/core/ps/: CMakeLists.txt  dense_table.h  server.h
tips/: .pre-commit-config.yaml  CMakeLists.txt
tips/_keras/: __init__.py  callbacks.py
tips/cmake/: core.cmake
tips/core/: CMakeLists.txt  operations.cc  operations.h  rpc_service_names.h
tips/core/collective/: CMakeLists.txt  README.md  coordinator.cc  coordinator.h  coordinator_test.cc  grpc_server.cc  grpc_server.h  ops.cc  utils.cc  utils.h  utils_test.cc
tips/core/common/: CMakeLists.txt  any_vec.cc  any_vec.h  any_vec_test.cc  buffer.cc  buffer.h  buffer_test.cc  channel.cc  channel.h  channel_test.cc  common.cc  common.h  datatype.cc  datatype.h  flatbuffers_utils.cc  flatbuffers_utils.h  flatbuffers_utils_test.cc  logging.cc  logging.h  macro.h  managed_thread.h  naive_buffer.cc  naive_buffer.h  naive_buffer_test.cc  naive_rpc.cc  naive_rpc.h  naive_rpc_test.cc  rwlock.h  semaphore.cc  semaphore.h  thread_group.cc  thread_group.h  thread_group_test.cc  thread_pool.h  vec.cc  vec.h  zmq_listener.cc  zmq_listener.h  zmq_message.cc  zmq_message.h  (+1 more)
tips/core/message/: CMakeLists.txt  collective_messages.fbs  collective_messages_grpc.fbs  flatbuffers_test.cc  ps_messages.fbs  test0.fbs
tips/core/mpi/: CMakeLists.txt  mpi_allgather_test.cc  mpi_allreduce_test.cc  mpi_context.cc  mpi_context.h  mpi_group.cc  mpi_group.h  mpi_group_test.cc  tips_mpi.cc  tips_mpi.h
tips/core/ps/: CMakeLists.txt  README.md  access_method.cc  access_method.h  access_method_test.cc  client.h  dense_access_method.h  dense_table.cc  dense_table.h  dense_table_test.cc  param.cc  param.h  ps_client.cc  ps_client.h  ps_client_test.cc  ps_server.cc  ps_server.h  ps_server_test.cc  ps_utils.cc  ps_utils.h  route.cc  route.h  route_test.cc  server.cc  server.h  server_service.cc  server_service.h  server_worker_route.cc  server_worker_route.h  sparse_access_method.cc  sparse_access_method.h  sparse_table.cc  sparse_table.h  sparse_table_registry.cc  sparse_table_registry.h  sparse_table_registry_test.cc  sparse_table_service.cc  sparse_table_service.h  sparse_table_service_test.cc  sparse_table_test.cc  (+6 more)
tips/core/utils/: CMakeLists.txt  spinlock.h  string.cc  string.h
tips/swiftps/core/common/: CMakeLists.txt  common.cc  managed_thread.h  naive_buffer.cc  naive_rpc.h  semaphore.cc  semaphore.h  swifts_rpc_test.cc  zmq_message.h
tips/swiftps/core/mpi/: CMakeLists.txt
tips/swiftps/core/ps/: README.md  client.cc  sparse_table.cc
tips/tensorflow/: CMakeLists.txt  __init__.py  basics.py  compression.py  functions.py  gradient_aggregation.py  gradient_aggregation_eager.py  keras.py  ops.cc  ops.h  ops.py  test_ops.py  test_tensorflow2_keras.py  utils.py
tips/tensorflow/keras/: __init__.py  callbacks.py
